samples/_failures_safe/1761640729_5d450e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04577bb3.c: In function ‘main’:
./samples/SAFE/__tmp_04577bb3.c:156:5: error: expected expression at end of input
  156 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_04577bb3.c:156:5: error: expected declaration or statement at end of input
